prevent large gaps in layout view

--- a/canvas-editor.scss
+++ b/canvas-editor.scss
@@ -25,7 +25,7 @@ $canvas_editor_min_height: 400; // px
 	}
 
 	> .collapsible {
-		min-height: px_to_rem($canvas_editor_min_height);
+		//min-height: px_to_rem($canvas_editor_min_height);
 	}
 
 	.collapsible {
